--- a/SpringBoot-SimpleAPI/crud-api/src/main/resources/application.properties
+++ b/SpringBoot-SimpleAPI/crud-api/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 spring.application.name=crud-api
+spring.datasource.url=jdbc:mysql://localhost:3308/userdb
+spring.datasource.username=root
+spring.datasource.password=
+spring.jpa.hibernate.ddl-auto=update
