--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -22,4 +22,4 @@ spring.datasource.hikari.max-lifetime=600000
 minio.endpoint=http://localhost:9000
 minio.access-key=minioadmin
 minio.secret-key=minioadmin
-minio.bucket-name=user-profiles
+minio.bucket-name=demo.powerwin
